# AVR-HAL

./: .clang-format  .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.md  toolchain.cmake
HAL/: CMakeLists.txt  build.make
HAL/AVR/: GPIO.cpp  GPIO.h  SPI.cpp  SPI.h  Serial.h  TWI.cpp  TWI.h  bit_operations.h
HAL/boards/: ArduinoMega.h  CMakeLists.txt  board.cmake  boards.h  boards.make
HAL/boards/ARDUINOMEGA2560/: CMakeLists.txt  board.h  board.make
HAL/boards/ARDUINONANO328P/: CMakeLists.txt  board.cmake  board.h  board.make
HAL/boards/ATMEGA324P/: ATMEGA324P.h  programmers.make
HAL/boards/ATxxx4324P/: ATxxx4324P.h
HAL/boards/ArduinoMega2560/: ArduinoMega2560.h  programmers.make
HAL/boards/ArduinoNano328/: ArduinoNano328.h
HAL/boards/ArduinoNano328P/: ArduinoNano328P.h
HAL/boards/EASYAVR128/: CMakeLists.txt  board.h  board.make  programmers.make
HAL/boards/EVB/: EVB.h
HAL/boards/EVB_ATMEGA324P/: CMakeLists.txt  board.cmake  board.h  board.make
HAL/boards/EVB_ATMega324p/: EVB_ATMega324p.h  programmers.make
HAL/boards/EVB_MEGA644P/: CMakeLists.txt  board.cmake  board.h  board.make
HAL/boards/RadFET_EM1/: RadFET_EM1.h  programmers.make
HAL/boards/RadFET_stand/: RadFET_stand.h
HAL/boards/SunS_EM3/: SunS_EM3.h  programmers.make
HAL/boards/easyAVR128/: easyAVR128.h  programmers.make
HAL/devices/: A3G4250D.h  AD5641.h  AD7714-ext.h  AD7714.h  ADG708.h  ADG709.h  ADXRS453.h  AT24C02.h  CMakeLists.txt  DAC1220.h  FPF270x.hpp  ITG3200.h  LED.h  LM60.h  MAX31865.h  PCF8563.h  SunS_BH1730FVC.h
HAL/libs/: CLI.h  CMakeLists.txt  array.h  array_view.h  bit_operations.h  compile_time.h  fifo.h  hal_assert.h  reader.cpp  reader.h  span.h  type_traits.h  writer.cpp  writer.h
HAL/libs/device_supports/: LM60.h  RTD.h
HAL/libs/gcc_addons/: CMakeLists.txt  guards.cpp
HAL/libs/std/: CMakeLists.txt  algorithm  cassert  cerrno  cfloat  chrono  ciso646  climits  clocale  csignal  cstddef  cstdint  cstdio  cstring  ctype.h  cwchar  deque  float.h  forward_list  fstream  iso646.h  limits  list  locale.h  map  mem.h  new  numeric  pthread_alloc  queue  ratio  set  signal.h  stack  stddef.h  stdint.h  stdio.h  stdlib.h  string  string.h  (+9 more)
HAL/libs/terminal/: terminal.cpp  terminal.h
HAL/mcu/: CMakeLists.txt  mcu.cmake  mcu.h  mcu.make
HAL/mcu/at90can128_tqfp64/: mcu.h  mcu_analog.h  mcu_core.h  mcu_digitalIO.h  mcu_exti.h  mcu_serial.h  mcu_spi.h  mcu_timers.h
HAL/mcu/atmega128A_tqfp64/: atmega128A_tqfp64.h  mcu_digitalIO.h  serial.h
HAL/mcu/atmega128a_tqfp64/: mcu.h  mcu_analog.h  mcu_core.h  mcu_digitalIO.h  mcu_exti.h  mcu_i2c.h  mcu_serial.h  mcu_spi.h  mcu_timers.h  mcu_watchdog.h  timers.h
HAL/mcu/atmega164p_324p_644p_44/: mcu.h  mcu_analog.h  mcu_digitalIO.h  mcu_serial.h  mcu_spi.h
HAL/mcu/atmega2560_tqfp100/: atmega2560_tqfp100.h  mcu.h  mcu_analog.h  mcu_digitalIO.h  mcu_i2c.h  mcu_serial.h  mcu_spi.h  mcu_watchdog.h  serial.h
HAL/mcu/atmega324p_tqfp32/: mcu_analog.h  mcu_digitalIO.h  mcu_i2c.h  mcu_spi.h  mcu_watchdog.h
HAL/mcu/atmega328p_tqfp32/: atmega328p_tqfp32.h  mcu.h  mcu_analog.h  mcu_digitalIO.h  mcu_i2c.h  mcu_serial.h  mcu_spi.h  mcu_timers.h  serial.h  spi_def.h
HAL/mcu/atmega644p_dip40/: mcu.h  mcu_analog.h  mcu_digitalIO.h  mcu_i2c.h  mcu_serial.h  mcu_spi.h
HAL/periph/: Analog.cpp  Analog.h  CMakeLists.txt  DigitalIO.h  DigitalIOPinDescriptor.h  EXTI.h  GPIO.h  GPIOPinDescriptor.h  I2C.h  PeriphDescriptors.h  SPI.h  SPIHardware.h  SPISlave.h  SPISoftware.h  Serial.cpp  Serial.h  SoftI2C.h  TWI.h  TWISlave.h  Watchdog.h  eeprom.cpp  eeprom.h
HAL/periph/Analog/: Analog.h
HAL/periph/AnalogIO/: Analog.h
HAL/periph/GPIO/: DigitalIO.h  PeriphDescriptors.h
HAL/periph/I2C/: CMakeLists.txt  I2C.h  SoftI2C.h  TWI.h  TWISlave.h
HAL/periph/MCU/: Watchdog.h  eeprom.cpp  eeprom.h
HAL/periph/SPI/: SPI.h  SPIHardware.h  SPISlave.h
HAL/periph/Serial/: CMakeLists.txt  Serial.h  Serial_defines.h  Serial_device.h
examples/all_targets/: CMakeLists.txt  Makefile
examples/all_targets/A3G4250D/: A3G4250D.cpp  CMakeLists.txt
examples/all_targets/AD7714/: AD7714.cpp  CMakeLists.txt
examples/all_targets/ADC/: ADC.cpp  CMakeLists.txt
examples/all_targets/ADG849/: ADG849.cpp  CMakeLists.txt
examples/all_targets/ADXRS453/: ADXRS453.cpp  CMakeLists.txt
examples/all_targets/AT24C02_SoftI2C/: AT24C02.cpp  CMakeLists.txt
examples/all_targets/AT24C02_TWI/: AT24C02.cpp  CMakeLists.txt
examples/all_targets/DigitalIO/: CMakeLists.txt  DigitalIO.cpp
examples/all_targets/EEPROM/: CMakeLists.txt  EEPROM.cpp
examples/all_targets/EXTI/: CMakeLists.txt  EXTI.cpp
examples/all_targets/ITG3200/: CMakeLists.txt  ITG3200.cpp
hal/: CMakeLists.txt  devices.h  hal  libs.h  periph.h
hal/boards/: CMakeLists.txt  board.cmake
hal/devices/: AD5641.h  AD7714-ext.h  AD7714.h  ADC12x.h  ADG708.h  ADG709.h  ADG849.h  ADXRS453.h  AT24C02.h  CMakeLists.txt  DAC121.h  DAC1220.h  FPF270x.h  FPF270x.hpp  LED.h  PCF8563.h  TMP121.h  TPS3813.h
hal/libs/: CMakeLists.txt  array.h  bit_operations.h  compile_time.h  fifo.h  hal_assert.h  reader.cpp  reader.h  simavr.h  span.h  writer.cpp  writer.h
hal/mcu/: CMakeLists.txt  mcu.cmake
hal/periph/: CMakeLists.txt
tests/SingleDevice/: CMakeLists.txt  README.md  main.cpp  tests.h
unit_tests/: CMakeLists.txt  DigitalIO.cpp  I2C.cpp  Makefile  ReaderTest.cpp  WriterTest.cpp  array.cpp  array_view.cpp  bit_operations.cpp  compile_time.cpp  data_types.cpp  devices_compilation.cpp  eeprom.cpp  fifo.cpp  gcc_static.cpp  main.cpp  pure_virtual.cpp  span.cpp  terminal.cpp  tests.h
unit_tests/drivers/: AD5641.cpp  ADC12x.cpp  ADG708.cpp  ADG709.cpp  ADG849.cpp  DAC121.cpp  FPF270x.cpp  LED.cpp  TMP121.cpp  TPS3813.cpp
unit_tests/gtest/: CMakeLists.txt  CMakeLists.txt.in
unit_tests/libs/: ReaderTest.cpp  WriterTest.cpp  array.cpp  bit_operations.cpp  compile_time.cpp  data_types.cpp  fifo.cpp  span.cpp  std.cpp  terminal.cpp
unit_tests/mocks/: DigitalIO.h  SPI.h
unit_tests/periph/: DigitalIO.cpp  SPIHardware.cpp  eeprom.cpp
unit_tests/unity/: CMakeLists.txt  CMakeLists.txt.in
(+525 files in other folders)
