set(NAME hal_devices)
add_library(${NAME} INTERFACE)

target_sources(${NAME} INTERFACE
    ${CMAKE_CURRENT_LIST_DIR}/AD5641.h
    ${CMAKE_CURRENT_LIST_DIR}/AD7714-ext.h
    ${CMAKE_CURRENT_LIST_DIR}/AD7714.h
    ${CMAKE_CURRENT_LIST_DIR}/ADC12x.h
    ${CMAKE_CURRENT_LIST_DIR}/ADG708.h
    ${CMAKE_CURRENT_LIST_DIR}/ADG709.h
    ${CMAKE_CURRENT_LIST_DIR}/ADG849.h
    ${CMAKE_CURRENT_LIST_DIR}/ADXRS453.h
    ${CMAKE_CURRENT_LIST_DIR}/AT24C02.h
    ${CMAKE_CURRENT_LIST_DIR}/DAC1220.h
    ${CMAKE_CURRENT_LIST_DIR}/FPF270x.h
    ${CMAKE_CURRENT_LIST_DIR}/LED.h
    ${CMAKE_CURRENT_LIST_DIR}/PCF8563.h
    ${CMAKE_CURRENT_LIST_DIR}/TMP121.h
    ${CMAKE_CURRENT_LIST_DIR}/TPS3813.h
)
