set(NAME board)

add_library(${NAME} INTERFACE)

target_include_directories(${NAME} INTERFACE
    ${CMAKE_CURRENT_LIST_DIR}
)

set(HAL_MCU ATMEGA2560_TQFP100 CACHE STRING "")
set(F_CPU 16000000L CACHE STRING "")
set(AVRDUDE_TOOL wiring CACHE STRING "")

set(AVRDUDE_OPTIONS -P -b115200 CACHE STRING "")
